  cast it anyway, but lose hit points equal to the excess energy. Casting
  healing spells using blood magic will deal extra damage to you in order to
  prevent skill farming.
- Ring of Psychic Resistance: One of the few ways in the game to become
  resistant to psionic attacks.
- Ring of Memory: Blocks the forgetting of items, spells, and objects.
  Essentially amnesia resistance.

New Features
- Pets can gain intrinsics through corpses in the same way that the player can.
- Water walking has been implemented for monsters, and functions exactly how one
  would expect.
- Displacement has been implemented for monsters. A displaced monster has a 1/4
  chance of being someplace else when it is melee-d, and then surprising you.
  Displacement can be bypassed using see invisible or telepathy. This feature is
  subject to change on player feedback.
- Monsters can jump. This essentially allows them to do a short range teleport
  to the player if there is an available jumping path.
- All monsters can now gain displacement, water walking, and jumping from
  appropriate items.

Role and Race Changes
- Improved Cartomancer energy levels, which were very low due to a missing case
  in a switch statement.
- Cartomancer basement is now a mines level.
- Easter egg for Cartomancers that read credit cards.
- Chromatic dragons are treated as domestic for Dragonmasters, meaning (among
  other things) that they can be tamed.
- Dragonmasters slowly regenerate energy when standing next to pet dragons.
  Additionally, pet dragons will attempt to help a dragonmaster who is slimed,
  asleep, or stuck.

Miscelaneous Changes and Bug Fixes
- Landsharks are no longer slithy.
- Martial artists and martial masters use monk hit messages.
- Landsharks and Jumping Spiders are capable of jumping. Polymorphing into
  either of these monsters will grant the ability to jump.
- Completely reworked Mephisto's lair.
- The Grim Reaper is now drain resistant.