@@ -909,7 +909,8 @@ SCROLL("web",                     "OCTAHEXAOCTA",  1,  20,  50), /* 868 */
 SCROLL("teleportation",        "VENZAR BORGAVVE",  1,  55, 100),
 SCROLL("gold detection",                 "THARR",  1,  33, 100),
 SCROLL("food detection",               "YUM YUM",  1,  25, 100),
-SCROLL("identify",                  "KERNOD WEL",  1, 180,  20),
+SCROLL("knowledge",                   "POTESTAS",  1,  20,  20), /* power */
+SCROLL("identify",                  "KERNOD WEL",  1, 160,  20),
 SCROLL("pure law",                   "TRATS ARL",  1,   5, 200), /* LRA START */
 SCROLL("true neutrality",         "TWAS BRILLIG",  1,   5, 200), /* Jabberwocky */
 SCROLL("raw chaos",                 "TLON UQBAR",  1,   5, 200), /* Tlon Uqbar */
@@ -932,7 +933,7 @@ SCROLL(None,            "NYEHEHE",  1,   0, 100), /* laughing noise */
 SCROLL(None,      "ELPHE MONATER",  1,   0, 100), /* famous mistranslation */
 SCROLL(None,               "ABAJ",  1,   0, 100), /* famous mistranslation */
 SCROLL(None,     "CONGLATURATION",  1,   0, 100), /* famous mistranslation */
-SCROLL(None,       "DESUM TETRAL",  1,   0, 100),
+SCROLL(None,       "DESUM TETRAL",  1,   0, 100), /* dal aos */
 SCROLL(None,            "NHINRL",   1,   0, 100), /* meta */
 SCROLL(None,          "ISAY INAY",  1,   0, 100), /* meta */
 SCROLL(None,              "TEMOV",  1,   0, 100),
